saveBooking api changed into create and update apis. implemented approve booking. a bit of refactoring on booking and tests